[gd_scene load_steps=11 format=3 uid="uid://drnr02n88tma"]

[ext_resource type="Script" path="res://MiniGame.gd" id="1_kco6m"]
[ext_resource type="Texture2D" uid="uid://db6plng4vwpo8" path="res://png/stadium.png" id="2_lcpsj"]
[ext_resource type="Texture2D" uid="uid://firn8bc1qrqi" path="res://png/red_ball.png" id="3_mkkye"]
[ext_resource type="Texture2D" uid="uid://dqb8n7e4pbvcl" path="res://png/blue_ball.png" id="4_25bok"]
[ext_resource type="Texture2D" uid="uid://dyyp0usqvnej0" path="res://Sprite/green_goal.png" id="4_g753r"]
[ext_resource type="Texture2D" uid="uid://bpuicymnxbfew" path="res://Sprite/check_5610944.png" id="6_aba86"]
[ext_resource type="Texture2D" uid="uid://btof3m8nyi4uj" path="res://Sprite/delete-button_5974771.png" id="7_c5qpy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_33p51"]
radius = 103.73

[sub_resource type="CircleShape2D" id="CircleShape2D_71n53"]
radius = 104.174

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef76g"]
size = Vector2(196.623, 99.1135)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kco6m")

[node name="Stadium" type="Sprite2D" parent="."]
position = Vector2(493, -606)
scale = Vector2(2.91551, 3.61247)
texture = ExtResource("2_lcpsj")

[node name="Countdown" type="Label" parent="."]
offset_left = 359.0
offset_top = 517.0
offset_right = 360.0
offset_bottom = 722.0
theme_override_font_sizes/font_size = 150
horizontal_alignment = 1
vertical_alignment = 1
structured_text_bidi_override_options = [null, null]

[node name="RoundTimer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
offset_left = 359.0
offset_top = 578.0
offset_right = 360.0
offset_bottom = 661.0
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Timer" parent="TimerLabel"]

[node name="TargetColorRect" type="ColorRect" parent="."]
offset_left = 360.0
offset_top = 620.0
offset_right = 360.0
offset_bottom = 620.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 50)
offset_left = 310.0
offset_top = 595.0
offset_right = 410.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 360.0
offset_top = 620.0
offset_right = 360.0
offset_bottom = 620.0
theme_override_constants/h_separation = 0

[node name="RedGoal" type="Area2D" parent="GridContainer"]
position = Vector2(-299, -542)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridContainer/RedGoal"]
position = Vector2(276, 116)
shape = SubResource("CircleShape2D_33p51")

[node name="BlueGoal" type="Area2D" parent="GridContainer"]
position = Vector2(-66, 143)
scale = Vector2(1.48889, 1.57143)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridContainer/BlueGoal"]
position = Vector2(47.6865, -152.091)
shape = SubResource("CircleShape2D_71n53")

[node name="GreenGoal" type="Area2D" parent="GridContainer"]
position = Vector2(602, 349)
scale = Vector2(1.48889, 1.57143)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridContainer/GreenGoal"]
position = Vector2(-184.282, 126.079)
shape = SubResource("RectangleShape2D_ef76g")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer"]
position = Vector2(2, -427)
scale = Vector2(0.086, 0.081)
texture = ExtResource("3_mkkye")

[node name="Sprite2D2" type="Sprite2D" parent="GridContainer"]
position = Vector2(2, -96)
scale = Vector2(0.128045, 0.136714)
texture = ExtResource("4_25bok")

[node name="Sprite2D3" type="Sprite2D" parent="GridContainer"]
position = Vector2(2, 544)
scale = Vector2(0.854687, 0.910028)
texture = ExtResource("4_g753r")

[node name="ScoreIcons" type="HBoxContainer" parent="."]
offset_left = 348.0
offset_top = 620.0
offset_right = 372.0
offset_bottom = 620.0
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="TextureRect6" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="TextureRect7" type="TextureRect" parent="ScoreIcons"]
layout_mode = 2
texture = ExtResource("6_aba86")
expand_mode = 2

[node name="MistakeIcons" type="HBoxContainer" parent="."]
offset_left = 358.0
offset_top = 620.0
offset_right = 362.0
offset_bottom = 620.0

[node name="TextureRect" type="TextureRect" parent="MistakeIcons"]
layout_mode = 2
texture = ExtResource("7_c5qpy")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MistakeIcons"]
layout_mode = 2
texture = ExtResource("7_c5qpy")
expand_mode = 2
